Add `amsmath` package to preamble.

--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -1,5 +1,7 @@
 \hypersetup{colorlinks}
 
+\usepackage{amsmath}
+
 % Used for printing a trailing space better than using a tilde (~) using the
 % \xspace command
 \usepackage{xspace}
