--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -1,4 +1,26 @@
-\hypersetup{colorlinks}
+\usepackage{hyperref}
+% Define footnote color option.
+\makeatletter
+\def\@footnotecolor{red}
+\define@key{Hyp}{footnotecolor}{%
+ \HyColor@HyperrefColor{#1}\@footnotecolor%
+}
+\def\@footnotemark{%
+  \leavevmode
+  \ifhmode\edef\@x@sf{\the\spacefactor}\nobreak\fi
+  \stepcounter{Hfootnote}%
+  \global\let\Hy@saved@currentHref\@currentHref
+  \hyper@makecurrent{Hfootnote}%
+  \global\let\Hy@footnote@currentHref\@currentHref
+  \global\let\@currentHref\Hy@saved@currentHref
+  \hyper@linkstart{footnote}{\Hy@footnote@currentHref}%
+  \@makefnmark
+  \hyper@linkend
+  \ifhmode\spacefactor\@x@sf\fi
+  \relax
+}%
+\makeatother
+\hypersetup{colorlinks=true,footnotecolor=blue}
 
 \usepackage{amsmath}
 
